--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -25,8 +25,8 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-on boot-pause
-    exec system/bin/battery_charging
+# on boot-pause  #this one requires adding boot-pause trigger to init.c
+#     exec system/bin/battery_charging
 
 on boot
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
@@ -44,14 +44,15 @@ on boot
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
     # Create the directories used by the Wireless subsystem
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-    symlink /persist/qcom_wlan_nv.bin /etc/firmware/wlan/qcom_wlan_nv.bin
-    symlink /data/hostapd/qcom_cfg.ini /etc/firmware/wlan/qcom_cfg.ini
-    setprop wifi.interface eth0
+    # mkdir /data/misc/wifi 0770 wifi wifi
+    # mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    # mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
+    # mkdir /data/misc/dhcp 0770 dhcp dhcp
+    # chown dhcp dhcp /data/misc/dhcp
+    # symlink /persist/qcom_wlan_nv.bin /etc/firmware/wlan/qcom_wlan_nv.bin
+    # symlink /data/hostapd/qcom_cfg.ini /etc/firmware/wlan/qcom_cfg.ini
+    # this section is present in init.streakpro.rc, commenting out
+    # setprop wifi.interface wlan0
 
     # Enable Bluetooth 802.11 PAL when Bluetooth is turned on
     setprop ro.config.bt.amp no
@@ -90,9 +91,10 @@ on boot
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
     # Remove write permissions to video related nodes
-    chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
-    chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
-    chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
+    # chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
+    # chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
+    # chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
+    # this section is present in init.streakpro.rc, commenting out
 
     # Change owner and group for media server and surface flinger
     chown media system /sys/devices/virtual/graphics/fb1/format_3d
@@ -239,20 +241,20 @@ service amp_unload /system/bin/amploader -u
     disabled
     #oneshot
 
-service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
-    user root
-    group wifi inet
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
+#service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
+#    user root
+#    group wifi inet
+#    socket wpa_wlan0 dgram 660 wifi wifi
+#    disabled
+#    oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -BKL eth0
-    disabled
-    oneshot
+#service dhcpcd_wlan0 /system/bin/dhcpcd -BKL wlan0
+#    disabled
+#    oneshot
 
-service iprenew_eth0 /system/bin/dhcpcd -n eth0
-    disabled
-    oneshot
+#service iprenew_wlan0 /system/bin/dhcpcd -n wlan0
+#    disabled
+#    oneshot
 
 service wiperiface /system/bin/wiperiface
     user location
@@ -383,12 +385,13 @@ service map /system/bin/sdptool add --channel=16 MAS
     disabled
     oneshot
 
-service ril-daemon1 /system/bin/rild -c 1
-    socket rild1 stream 660 root radio
-    socket rild-debug1 stream 660 radio system
-    user root
-    disabled
-    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
+# service ril-daemon1 /system/bin/rild -c 1
+#     socket rild1 stream 660 root radio
+#     socket rild-debug1 stream 660 radio system
+#     user root
+#     disabled
+#     group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
+# disabling this one for now to see what'll happen
 
 service profiler_daemon /system/bin/profiler_daemon
     user root
