--- a/wifi/wpa_supplicant.conf
+++ b/wifi/wpa_supplicant.conf
@@ -1,4 +1,4 @@
-ctrl_interface=DIR=/data/misc/wifi/sockets GROUP=wifi
+ctrl_interface=eth0
 ctrl_interface_group=wifi
 update_config=1
 eapol_version=1
