--- a/ramdisk/ueventd.streakpro.rc
+++ b/ramdisk/ueventd.streakpro.rc
@@ -74,7 +74,8 @@
 /dev/sdioctl7             0640   radio      radio
 /dev/sdioctl8             0640   radio      radio
 /dev/sdio_tty_ciq_00      0660   system     system
-/dev/smd0                 0640   radio      radio
+/dev/smd0                 0660   system     system
+/dev/smd4                 0660   system     system
 /dev/smd7                 0640   radio      radio
 /dev/smdcntl0             0640   radio      radio
 /dev/smdcntl1             0640   radio      radio
