--- a/ramdisk/init.streakpro.rc
+++ b/ramdisk/init.streakpro.rc
@@ -115,7 +115,7 @@ on boot
     chmod 0660 /data/hostapd/hostapd.conf
     chmod 0770 /data/misc/wifi
     chmod 0660 /data/misc/wifi/wpa_supplicant.conf 
-    chmod 0660 /dev/smd0
+#    chmod 0660 /dev/smd0
     chmod 0660 /dev/ttyGS0
     chmod 0660 /dev/ttyHS0
     chmod 0660 /proc/bluetooth/sleep/proto
@@ -156,7 +156,7 @@ on boot
     chown wifi wifi /data/misc/wifi/wpa_supplicant.conf
     chown system camera /sys/class/leds/camera:flash0/brightness
     chown system camera /sys/class/leds/camera:flash1/brightness
-    chown system system /dev/smd0
+#    chown system system /dev/smd0
     chown system system /dev/ttyGS0
     chown system system /sys/class/leds/button-backlight/brightness
     chown system system /sys/class/leds/green/device/blink
@@ -194,6 +194,7 @@ on boot
     write /proc/sys/vm/dirty_expire_centisecs 60000
     write /proc/sys/vm/dirty_writeback_centisecs 60000
     write /sys/touch/home_key_wake_en 0
+    symlink /flex/data/audio_cal.acdb /system/etc/audio_cal.acdb
 
 # Services start here
 
@@ -432,7 +433,7 @@ service qmuxd /system/bin/qmuxd
     user radio
     group radio audio bluetooth gps
 
-service wpa_supplicant /system/bin/wpa_supplicant -dddd -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
 	class main
     group system wifi inet
     socket wpa_wlan0 dgram 660 wifi wifi
